Metric page alignment issue fix

--- a/themes/roots-nextdatagov/assets/css/rei.css
+++ b/themes/roots-nextdatagov/assets/css/rei.css
@@ -500,7 +500,7 @@ tr.even, tr.even td a {
     padding: 10px;
 }
 #open-data-sites-boxes.agencies .open-data-sites-box {
-    height: 30px;
+    height: 40px;
     margin: 10px 0 0;
     padding-left: 10px;
     padding-right: 10px;
